; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_ide-scan-pci.c___ide_pci_register_driver.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_ide-scan-pci.c___ide_pci_register_driver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_driver = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.module* }
%struct.module = type { i32 }

@pre_init = common dso_local global i32 0, align 4
@ide_pci_drivers = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__ide_pci_register_driver(%struct.pci_driver* %0, %struct.module* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.pci_driver*, align 8
  %6 = alloca %struct.module*, align 8
  %7 = alloca i8*, align 8
  store %struct.pci_driver* %0, %struct.pci_driver** %5, align 8
  store %struct.module* %1, %struct.module** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i32, i32* @pre_init, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %15, label %10

10:                                               ; preds = %3
  %11 = load %struct.pci_driver*, %struct.pci_driver** %5, align 8
  %12 = load %struct.module*, %struct.module** %6, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @__pci_register_driver(%struct.pci_driver* %11, %struct.module* %12, i8* %13)
  store i32 %14, i32* %4, align 4
  br label %23

15:                                               ; preds = %3
  %16 = load %struct.module*, %struct.module** %6, align 8
  %17 = load %struct.pci_driver*, %struct.pci_driver** %5, align 8
  %18 = getelementptr inbounds %struct.pci_driver, %struct.pci_driver* %17, i32 0, i32 1
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  store %struct.module* %16, %struct.module** %19, align 8
  %20 = load %struct.pci_driver*, %struct.pci_driver** %5, align 8
  %21 = getelementptr inbounds %struct.pci_driver, %struct.pci_driver* %20, i32 0, i32 0
  %22 = call i32 @list_add_tail(i32* %21, i32* @ide_pci_drivers)
  store i32 0, i32* %4, align 4
  br label %23

23:                                               ; preds = %15, %10
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i32 @__pci_register_driver(%struct.pci_driver*, %struct.module*, i8*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
